--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cloudinary": "^1.40.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
